--- a/packages/toast-message/addon/styles/components/_nucleus-toast-message.scss
+++ b/packages/toast-message/addon/styles/components/_nucleus-toast-message.scss
@@ -1,6 +1,6 @@
 .nucleus-toast-messages {
   position: fixed;
-  z-index: 9999999999;
+  z-index: map-get($nucleus-zindex, toast);
 
   @extend %font-antialias;
 
